--- a/src/global.css
+++ b/src/global.css
@@ -57,24 +57,36 @@
 }
 
 :root {
-  --primary: #1c2022;
+  --primary: #000;
   --lightText: #d9d9d9;
   --grey1: #f7f7f7;
-  --grey2: #F3F3F3;
-  --grey3: #EDEDED;
-
+  --grey2: #f3f3f3;
+  --grey3: #ededed;
 }
-
+html {
+  height: 100vh;
+}
 body {
+  height: 100vh;
+  width: 100vw;
+}
+body {
+  position: relative;
   background: var(--primary);
   color: var(--lightText);
   font-family: 'proxima-nova', serif;
   font-size: 1rem;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 1.3125rem; /* 131.25% */
   overflow-x: hidden;
   overflow-y: scroll;
+  margin: 0;
+  background-image: url($lib/assets/earth.jpeg);
+  background-position: 0 0;
+  background-repeat: repeat;
+  background-size: 2111px;
+  background-clip: border-box;
 }
 
 header {
@@ -106,7 +118,14 @@ p {
 main {
   padding: 1rem 2rem;
 }
-
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  z-index: -1;
+}
 @media screen and (max-width: 1000px) {
   h2 {
     font-size: 2.9375rem;
@@ -118,5 +137,31 @@ main {
 @media screen and (max-width: 480px) {
   main {
     padding: 0;
+  }
+  header {
+    padding: 0.938rem 1rem;
+  }
+}
+
+/* Webflow bg css */
+@media screen and (max-width: 991px) {
+  body {
+    background-size: 1600px;
+  }
+  .overlay {
+    background: rgb(0 0 0 / 68%);
+  }
+}
+@media screen and (max-width: 767px) {
+  body {
+    background-size: 1450px;
+  }
+}
+@media screen and (max-width: 479px) {
+  body {
+    background-position: 63% 0;
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-attachment: scroll;
   }
 }
